       five methods all of which return constants no longer return NIL
       after the first few invocations.  (thanks to Gerd Moellmann)
    ** CALL-NEXT-METHOD with no arguments now passes the original
       values of the arguments, even in the presence of assignment.
    ** functions [N]SUBST*, LAST, NRECONC, [N]SUBLIS may return any
       object.
    ** DISASSEMBLE works with closures and funcallable instances.
    ** ADD-METHOD now returns the generic function, not the new
       method.
    ** FIND-METHOD signals an error if the lengths of the specializers
       is incompatible with the generic function, even if the ERRORP
       argument is true.
    ** TYPE-OF returns recognizeable subtypes of all built-in-types of
       which its argument is a member.
    ** DEFCLASS only redefines the class named by its class-name
       argument if that name is the proper name of the class;
       otherwise, it creates a new class.
    ** SLOT-UNBOUND now correctly initalizes the CELL-ERROR-NAME slot
       of the UNBOUND-SLOT condition to the name of the slot.
    ** (SETF (AREF bv 0) ...) did not work for bit vectors.

planned incompatible changes in 0.8.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, it might impact TRACE. They both encapsulate functions, and
    it's not clear yet how e.g. UNPROFILE will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are using
    profiling. If you never profile anything, TRACE should continue to
    behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom
	(DECLAIM (INLINE FOO))
	(DEFUN FOO (..) ..)
	(DECLAIM (NOTINLINE FOO))
	(DEFUN BAR (..) (FOO ..))
	(DEFUN BLETCH (..) (DECLARE (INLINE FOO)) (FOO ..))
    now does what ANSI says it should. The CMU-CL-style 
    SB-EXT:MAYBE-INLINE declaration is now deprecated and ignored.